# web-chat

./: .gitignore  README.md  alembic.ini  docker-compose.yaml  docker-compose.yml  pyproject.toml
src/: .dockerignore  Dockerfile  alembic.ini  entrypoint.sh  main.py  pyproject.toml
src/api/: dependesies.py  router.py  schemas.py
src/api/routes/: auth.py  messages.py  websocket.py  websoket.py
src/core/: config.py  connection_manager.py  exceptions.py  static.py
src/core/certs/: jwt-private.pem.example  jwt-public.pem.example
src/core/envs/: .env.example
src/database/: engine.py  models.py  repositories.py  session.py  unit_of_work.py
src/database/migrations/: env.py
src/database/migrations/versions/: 3ac84a3f7c11_rename_timestamp_to_created_at.py  4c816b5f3538_add_refresh_token.py  4f5f04892d45_fix_refresh_token_model.py  b5c42249597d_initial_migration.py
src/database/models/: __init__.py  message.py  refresh_token.py  user.py
src/database/repositories/: message_repository.py  refresh_token_repository.py  user_repository.py
src/repositories/: message_repository.py  refresh_token_repository.py  user_repository.py
src/schemas/: access_token.py  jwt.py  message.py  refresh_token.py  user.py
src/services/: auth_service.py  cookies_service.py  db_service.py  jwt_service.py  message_service.py  refresh_token_service.py  user_service.py  websoket_service.py
src/templates/: chat.html  login.html  register.html
src/websoket/: router.py
