[tool.poetry]
name = "web-chat"
version = "0.1.0"
description = ""
authors = ["John Preston <john@preston.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12"
alembic = "^1.18.1"
asyncpg = "^0.31.0"
fastapi = "^0.128.0"
psycopg2-binary = "^2.9.11"
pydantic = "^2.12.5"
pydantic-settings = "^2.12.0"
sqlalchemy = "^2.0.46"
uvicorn = {extras = ["standard"], version = "^0.41.0"}
pyjwt = { extras = ["crypto"], version = "^2.11.0" }
bcrypt = "^5.0.0"
python-multipart = "^0.0.22"
mypy = "^1.19.1"
ruff = "^0.15.2"

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
extend-select = ["I"]

[tool.mypy]
allow_redefinition = "False"
check_untyped_defs = "True"
disallow_untyped_decorators = "True"
disallow_any_explicit = "False"
disallow_any_generics = "True"
disallow_untyped_calls = "True"
ignore_errors = "False"
ignore_missing_imports = "True"
implicit_reexport = "False"
local_partial_types = "True"
strict_optional = "True"
strict_equality = "True"
no_implicit_optional = "True"
warn_unused_ignores = "True"
warn_redundant_casts = "True"
warn_unused_configs = "True"
warn_unreachable = "True"
warn_no_return = "True"
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
exclude = ["migrations"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
